# pydbzengine

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.agent/workflows/: write_tests.md
.github/: dependabot.yml
.github/workflows/: deploy-documentation.yml  release-test.yml  release.yml  tests.yml
airflow/: index.html
configuration/: index.html
contributing/: index.html
docs/: airflow.md  configuration.md  contributing.md  helpers.md  how-it-works.md  index.md  installation.md
docs/handlers/: custom.md  dlt.md  iceberg.md  index.md
handlers/: index.html
handlers/custom/: index.html
handlers/dlt/: index.html
handlers/iceberg/: index.html
helpers/: index.html
how-it-works/: index.html
installation/: index.html
pydbzengine/: __init__.py  _jvm.py  airflow.py  helper.py  install_libs.sh  pom.xml
pydbzengine/examples/: dlt_consuming.py
pydbzengine/handlers/: dlt.py  iceberg.py
search/: search_index.json
tests/: base_postgresql.py  base_postgresql_test.py  catalog_rest.py  db_postgresql.py  iceberg_catalog.py  minio_container.py  mock_events.py  postgres_container.py  s3_minio.py  test_change_handler.py  test_debeziumdlt.py  test_dlt_handler.py  test_engine.py  test_iceberg_handler.py  test_iceberg_handlerv2.py  test_postgresql.py
