[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # Important: Enables inclusion of non-code files

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pydbzengine" = ["debezium/libs/*.jar", "config/*"]

[project]
name = "pydbzengine"
version = "3.4.1.0"
authors = [
    { name = "Memiiso Organization" },
]
description = "Python Debezium Embedded Engine"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Debezium", "Replication", "CDC"]
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jpype1>=1.6.0",
]
[project.optional-dependencies]
iceberg = [
    "pyiceberg[pyiceberg-core]>=0.10.0",
    "pyarrow",
]
dlt = [
    "dlt>=1.5.0",
]
dev = [
    "testcontainers[minio]>=4.13.3",
    "dlt[duckdb]>=1.5.0",
    "apache-airflow>=2.10.4",
    "psycopg2-binary",
    "pandas"
]
#[project.scripts]
#debezium = "pydbzengine.__main__:main"

[project.urls]
Homepage = "https://github.com/memiiso/pydbzengine"
Documentation = "https://github.com/memiiso/pydbzengine"
Repository = "https://github.com/memiiso/pydbzengine"
