[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # Important: Enables inclusion of non-code files

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pydbzengine" = ["debezium/libs/*.jar", "config/*"]

[project]
name = "pydbzengine"
dynamic = ["version"]
authors = [
    { name = "Memiiso Organization" },
]
description = "Python Debezium Embedded Engine"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Debezium", "Replication", "CDC"]
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jpype1>=1.6.0",
]
[project.optional-dependencies]
iceberg = [
    "pyiceberg[pyiceberg-core]>=0.10.0",
    "pyarrow",
]
dlt = [
    "dlt>=1.5.0",
]
airflow = [
    "apache-airflow>=2.10.4",
]
dev = [
    "testcontainers[minio]>=4.13.3",
    "dlt[duckdb]>=1.5.0",
    "apache-airflow>=2.10.4",
    "psycopg2-binary",
    "pandas",
    "pytest",
    "sqlalchemy",
    "ruff"
]
docs = [
    "mkdocs-material",
]
#[project.scripts]
#debezium = "pydbzengine.__main__:main"

[project.urls]
Homepage = "https://github.com/memiiso/pydbzengine"
Documentation = "https://github.com/memiiso/pydbzengine"
Repository = "https://github.com/memiiso/pydbzengine"

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


